# rs-auth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  release.yml
auth/: Cargo.toml
auth/src/: lib.rs
axum/: Cargo.toml
axum/src/: cookie.rs  error.rs  extract.rs  lib.rs  middleware.rs  router.rs  state.rs
axum/src/handlers/: account.rs  login.rs  logout.rs  mod.rs  oauth.rs  reset.rs  session.rs  signup.rs  verify.rs
axum/tests/: account_http.rs  auth_http.rs  oauth_http.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: cleanup.rs  generate.rs  migrate.rs  mod.rs
core/: Cargo.toml
core/src/: config.rs  email.rs  error.rs  events.rs  hooks.rs  lib.rs  rate_limit.rs  service.rs  store.rs  types.rs
core/src/crypto/: hash.rs  token.rs
core/src/oauth/: client.rs  github.rs  google.rs  mod.rs
core/src/oauth/providers/: github.rs  google.rs
docs/: README.md  next.config.ts  package.json  source.config.ts  tsconfig.json
docs/content/docs/: index.mdx  installation.mdx  meta.json  quick-start.mdx
docs/content/docs/api/: link-provider.mdx  list-accounts.mdx  login.mdx  logout.mdx  meta.json  reset-password.mdx  session.mdx  sessions.mdx  signup.mdx  unlink-account.mdx  verify-email.mdx
docs/content/docs/axum/: extractors.mdx  meta.json  middleware.mdx  router.mdx
docs/content/docs/cli/: commands.mdx  meta.json
docs/content/docs/concepts/: email-verification.mdx  events-hooks.mdx  meta.json  sessions.mdx
docs/content/docs/configuration/: auth-config.mdx  cookie-config.mdx  email-config.mdx  meta.json
docs/content/docs/oauth/: account-linking.mdx  github.mdx  google.mdx  meta.json  production.mdx
docs/src/: mdx-components.tsx
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/changelog/: changelog-content.tsx  page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/components/: callout.tsx  code-frame.tsx  docs-sidebar.tsx  endpoint.tsx  footer.tsx  hero-canvas.tsx  highlighted-code.tsx  home-shell.tsx  logo.tsx  method-badge.tsx  nav.tsx  theme-toggle.tsx  toc.tsx
docs/src/themes/: vesper-light.json
examples/basic/: .dockerignore  Cargo.toml  README.md  docker-compose.yml
examples/basic/src/: main.rs
examples/basic/static/: index.html
pg/: Cargo.toml
pg/migrations/: 001_users.sql  002_sessions.sql  003_verifications.sql  004_accounts.sql  005_oauth_states.sql  006_oauth_states_intent.sql
pg/src/: account.rs  db.rs  lib.rs  migrate.rs  oauth_state.rs  session.rs  user.rs  verification.rs
pg/tests/: integration.rs
