[workspace]
members = ["auth", "core", "pg", "axum", "cli", "examples/basic"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["rs-auth contributors"]
repository = "https://github.com/rs-auth/rs-auth"
homepage = "https://rs-auth.com"
keywords = ["authentication", "auth", "axum", "session", "sqlx"]
categories = ["web-programming::http-server", "authentication"]
readme = "README.md"

[workspace.dependencies]
rs-auth-core = { path = "core", version = "0.1.0" }
rs-auth-postgres = { path = "pg", version = "0.1.0" }
rs-auth-axum = { path = "axum", version = "0.1.0" }
rs-auth-cli = { path = "cli", version = "0.1.0" }

tokio = { version = "1", default-features = false }
async-trait = "0.1"
axum-lib = { package = "axum", version = "0.8", default-features = false }
axum-extra = { version = "0.10", default-features = false }
tower = { version = "0.5", default-features = false }
tower-layer = "0.3"
tower-service = "0.3"
sqlx = { version = "0.8", default-features = false }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = "0.3"
anyhow = "1"
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
todo = "warn"
