[package]
name = "rs-auth-axum"
description = "Axum integration for rs-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rs-auth-core = { workspace = true }
axum-lib = { workspace = true, features = ["json", "macros", "query", "tokio", "http1"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-signed"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
rs-auth-core = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
