[package]
name = "rs-auth-cli"
description = "CLI helpers for rs-auth migrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rs-auth-core = { workspace = true }
rs-auth-postgres = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
