[package]
name = "rs-auth-core"
description = "Core types, crypto, and domain logic for rs-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
argon2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
