[package]
name = "rs-auth-postgres"
description = "Postgres persistence and migrations for rs-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rs-auth-core = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "time", "macros"] }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[lints]
workspace = true
