[package]
name = "rs-auth-postgres"
description = "Postgres persistence and migrations for rs-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
rs-auth-core = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[lints]
workspace = true
